--- a/docs/src/token.mdx
+++ b/docs/src/token.mdx
@@ -1819,11 +1819,12 @@ The sender's wallet must not require that the recipient's main wallet address
 hold a balance before allowing the transfer.
 
 ### Registry for token details
+
 At the moment there exist two solutions for Token Mint registries:
 
-* hard coded addresses in the wallet or dapp
-* [spl-token-registry](https://www.npmjs.com/package/@solana/spl-token-registry)
-package, maintained at [https://github.com/solana-labs/token-list](https://github.com/solana-labs/token-list)
+* Hard coded addresses in the wallet or dapp
+* Metaplex Token Metadata. Learn more at the
+[Token Metadata Documentation](https://docs.metaplex.com/programs/token-metadata/)
 
 **A decentralized solution is in progress.**
 
