Add a link to the token-list repo

--- a/docs/src/token.mdx
+++ b/docs/src/token.mdx
@@ -1820,11 +1820,13 @@ hold a balance before allowing the transfer.
 
 ### Registry for token details
 
-At the moment there exist two solutions for Token Mint registries:
+At the moment there exist a few solutions for Token Mint registries:
 
 * Hard coded addresses in the wallet or dapp
 * Metaplex Token Metadata. Learn more at the
 [Token Metadata Documentation](https://docs.metaplex.com/programs/token-metadata/)
+* The deprecated token-list repo has
+[instructions for creating your own metadata](https://github.com/solana-labs/token-list#this-repository-is-eol-)
 
 **A decentralized solution is in progress.**
 
